   - Display of the end of hit debug messages has been factored out into
     log_headers, log_request and log_response methods which all call
     $c->dump_these so that there is a unified point from which to hook
     in parameter filtering (for example).
   - $c->model/view/controller have become a lot faster for non-regexp names
     by using direct hash lookup instead of looping.

  Bug fixed:
    - DispatchType::Index's uri_for_action only returns for actions registered
      with it (prevents 'index :Path' or similar resolving to the wrong URI)
    - Make sure to construct Upload objects properly, even if there are
      multiple Content-Type headers (Closes RT#55976).

5.80021 2010-03-03 23:02:01

  Bug fixed:
   - $c->uri_for will now escape unsafe characterss in captures
     ($c->request->captures) and correctly encode utf8 charracters.

5.80020 2010-02-04 06:51:18

  New features:
    - Allow components to specify additional components to be set up by
      overriding the expand_modules method. (Oliver Charles)

5.80019 2010-01-29 01:04:09

  Bug fixed:
   - Calls to $c->uri_for with private paths as strings (e.g.
     $c->uri_for('controller/action', 'arg1', 'arg2') ) no longer have
     / encoded to %2F. This is due to $c->uri_for('static', 'css/foo', $bar)
     which should not be encoded.
     Calls with an action object (rather than a string), or uri_for action
     will still encode / in args and captures to %2F

   - The above noted / => %2F encoding in uri_for_action or uri_for with
     an action object has been fixed to not just encode the first slash in
     any set of args/captures.

   - nginx and lighttpd FCGI requests with URI encoded sections as the first
     path part have been fixed to operate correctly.

   - A source of bogus warnings in Catalyst::Component::BUILDARGS has been
     removed.

  Documentation:
   - Improve the documentation about -Home and how Catalyst finds the home path
     for applications.